<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="edu.neu.khoury.madsea.matthewgatesdehn.ToDoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditTaskFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/task_title_text_hint"
                    app:dispatchOnLoseFocus="@{() -> viewmodel.editToDo.setTitle(titleEditText.getText().toString())}"
                    android:text="@{viewmodel.editToDo.title}"
                    android:inputType="textShortMessage" />

                <EditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/task_description_text_hint"
                    app:dispatchOnLoseFocus="@{() -> viewmodel.editToDo.setDescription(descriptionEditText.getText().toString())}"
                    android:text="@{viewmodel.editToDo.description}"
                    android:inputType="textLongMessage" />


                <Spinner
                    android:id="@+id/tags_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/due_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/due_date_text_hint"
                    android:text="@{viewmodel.editToDo.getDueDate().toString()}"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"/>

                <CheckBox
                    android:id="@+id/remind_me_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:checked="@{viewmodel.editToDo.isRemindMe()}"
                    android:text="@string/remind_me_checkbox_text" />

                <EditText
                    android:id="@+id/remind_me_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@{viewmodel.editToDo.getRemindMeDate().toString()}"
                    android:hint="@string/remind_me_date_hint_text"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:enabled="@{viewmodel.editToDo.isRemindMe()}"/>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button_text" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button_text" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>